# helix

./: .gitignore  README.md
firmware/hello_pico/: CMakeLists.txt  main.c
ml/: train_act_pusht.py
ml/exploration/: dataset_exploration.ipynb
ml/exploration/.ipynb_checkpoints/: dataset_exploration-checkpoint.ipynb
